--- a/pages/baixar.html
+++ b/pages/baixar.html
@@ -1,190 +1,185 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
 
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Baixe o aplicativo KingDomfy para uma experiência de música completa no seu dispositivo favorito.">
 
-    <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
-    <title>KingDomfy - Baixar</title>
-    <link rel="icon" href="../src/imagens/favicon.png">
-  </head>
+  <title>KingDomfy - Baixar</title>
+  <link rel="icon" href="../src/imagens/favicon.png">
 
-  <body>
-    <header> 
-      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
-        <div class="container">
-          <a href="../index.html" class="navbar-brand">
-          <img src="../src/imagens/KingDomfy.png" width="100">
-          </a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+  <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
+  <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
+</head>
+
+<body id="baixar">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+      <div class="container">
+        <a href="../index.html" class="navbar-brand">
+          <img src="../src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-principal" aria-controls="nav-principal" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars text-white"></i>
         </button>
         <div class="collapse navbar-collapse" id="nav-principal">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="premium.html" class="nav-link">Premium</a>
-            </li>
-            <li class="nav-item">
-              <a href="ajuda.html" class="nav-link">Ajuda</a>
-            </li>
-            <li class="nav-item">
-              <a href="baixar.html" class="nav-link">Baixar</a>
-            </li>
+            <li class="nav-item"><a href="premium.html" class="nav-link">Premium</a></li>
+            <li class="nav-item"><a href="ajuda.html" class="nav-link">Ajuda</a></li>
+            <li class="nav-item"><a href="baixar.html" class="nav-link">Baixar</a></li>
             <li class="nav-item divisor"></li>
-            <li class="nav-item">
-              <a href="inscrever-se.html" class="nav-link">Inscrever-se</a>
+            <li class="nav-item"><a href="inscrever-se.html" class="nav-link">Inscrever-se</a></li>
+            <li class="nav-item"><a href="entrar.html" class="nav-link">Entrar</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main class="caixa">
+    <div class="container">
+        <div class="conteudo-interno text-center">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Leve o KingDomfy com você</h2>
+                    <p>Baixe nosso aplicativo para uma experiência completa no seu dispositivo favorito.</p>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <a href="#" class="btn btn-lg btn-custom btn-roxo btn-block">
+                        <i class="fab fa-windows mr-2"></i> Baixar para Windows
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#" class="btn btn-lg btn-custom btn-dark btn-block">
+                        <i class="fab fa-apple mr-2"></i> Baixar para macOS
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#" class="btn btn-lg btn-custom btn-secondary btn-block">
+                        <i class="fab fa-linux mr-2"></i> Baixar para Linux
+                    </a>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-md-12">
+                    <h2>Vantagens do App Desktop</h2>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <i class="fas fa-rocket fa-3x mb-3"></i>
+                    <h4>Melhor Performance</h4>
+                    <p>Nosso aplicativo é otimizado para consumir menos recursos e iniciar mais rápido.</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-cloud-download-alt fa-3x mb-3"></i>
+                    <h4>Modo Offline</h4>
+                    <p>Baixe suas playlists favoritas e ouça em qualquer lugar, sem precisar de internet.</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-sliders-h fa-3x mb-3"></i>
+                    <h4>Integração Nativa</h4>
+                    <p>Controle a reprodução com as teclas de mídia do seu teclado e receba notificações.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-auto mb-4">
+          <h4>Company</h4>
+          <ul class="navbar-nav">
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="empregos.html">Empregos</a></li>
+            <li><a href="imprensa.html">Imprensa</a></li>
+            <li><a href="novidades.html">Novidades</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Comunidades</h4>
+          <ul class="navbar-nav">
+            <li><a href="artistas.html">Para Artistas</a></li>
+            <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
+            <li><a href="marcas.html">Marcas</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Links Úteis</h4>
+          <ul class="navbar-nav">
+            <li><a href="ajuda.html">Ajuda</a></li>
+            <li><a href="player-da-web.html">Player da Web</a></li>
+            <li><a href="aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Site feito com:</h4>
+          <ul id="media">
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" alt="HTML5">
             </li>
-            <li class="nav-item">
-              <a href="entrar.html" class="nav-link">Entrar</a>
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" alt="CSS3">
+            </li>
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" alt="JavaScript">
             </li>
           </ul>
         </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Site feito por:</h4>
+          <ul class="navbar-nav">
+            <li>
+              <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
+                DomisDev
+              </a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header> 
-
-    <section class="caixa">
-        <div class="container">
-            <div class="conteudo-interno text-center">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>Leve o KingDomfy com você</h2>
-                        <p>Baixe nosso aplicativo para uma experiência completa no seu dispositivo favorito.</p>
-                    </div>
-                </div>
-
-                <div class="row mt-4">
-                    <div class="col-md-4">
-                        <a href="#" class="btn btn-lg btn-custom btn-roxo btn-block">
-                            <i class="fab fa-windows mr-2"></i> Baixar para Windows
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a href="#" class="btn btn-lg btn-custom btn-dark btn-block">
-                            <i class="fab fa-apple mr-2"></i> Baixar para macOS
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a href="#" class="btn btn-lg btn-custom btn-secondary btn-block">
-                            <i class="fab fa-linux mr-2"></i> Baixar para Linux
-                        </a>
-                    </div>
-                </div>
-
-                <div class="row mt-5">
-                    <div class="col-md-12">
-                        <h2>Vantagens do App Desktop</h2>
-                    </div>
-                </div>
-
-                <div class="row mt-4">
-                    <div class="col-md-4">
-                        <i class="fas fa-rocket fa-3x mb-3"></i>
-                        <h4>Melhor Performance</h4>
-                        <p>Nosso aplicativo é otimizado para consumir menos recursos e iniciar mais rápido.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <i class="fas fa-cloud-download-alt fa-3x mb-3"></i>
-                        <h4>Modo Offline</h4>
-                        <p>Baixe suas playlists favoritas e ouça em qualquer lugar, sem precisar de internet.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <i class="fas fa-sliders-h fa-3x mb-3"></i>
-                        <h4>Integração Nativa</h4>
-                        <p>Controle a reprodução com as teclas de mídia do seu teclado e receba notificações.</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-auto mb-4">
-            <h4>company</h4>
-            <ul class="navbar-nav">
-              <li><a href="sobre.html">Sobre</a></li>
-              <li><a href="empregos.html">Empregos</a></li>
-              <li><a href="imprensa.html">Imprensa</a></li>
-              <li><a href="novidades.html">Novidades</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>comunidades</h4>
-            <ul class="navbar-nav">
-              <li><a href="artistas.html">Artistas</a></li>
-              <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
-              <li><a href="marcas.html">Marcas</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>Links úteis</h4>
-            <ul class="navbar-nav">
-              <li><a href="suporte.html">Suporte</a></li>
-              <li><a href="player-da-web.html">Player da Web</a></li>
-              <li><a href="aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>site feito com:</h4>
-            <ul id="media">
-              <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
-              </li>
-              <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" />
-              </li>
-               <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" />
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>site feito por:</h4>
-            <ul class="navbar-nav">
-              <li>
-                <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
-                  DomisDev
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4 ml-lg-auto">
-            <h4>Redes Sociais:</h4>
-            <ul class="social-media-icons">
-              <li>
-                <a href="">
-                  <img src="../src/imagens/facebook.png" class="social-icon">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img src="../src/imagens/twitter.png" class="social-icon">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img src="../src/imagens/instagram.png" class="social-icon">
-                </a>
-              </li>
-            </ul>
-          </div>
+  
+        <div class="col-lg-auto mb-4 ml-lg-auto">
+          <h4>Redes Sociais</h4>
+          <ul class="social-media-icons">
+            <li>
+              <a href="#" aria-label="Facebook">
+                <img src="../src/imagens/facebook.png" class="social-icon" alt="Facebook">
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Twitter">
+                <img src="../src/imagens/twitter.png" class="social-icon" alt="Twitter">
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Instagram">
+                <img src="../src/imagens/instagram.png" class="social-icon" alt="Instagram">
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-    </footer>
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/popper/popper.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../src/js/app.js" defer></script>
+    </div>
+  </footer>
+  
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/popper/popper.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../src/js/app.js" defer></script>
   </body>
-</html>
+  </html>
+  
