--- a/pages/desenvolvedores.html
+++ b/pages/desenvolvedores.html
@@ -1,158 +1,159 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-    <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
-    <title>KingDomfy - Para Desenvolvedores</title>
-    <link rel="icon" href="../src/imagens/favicon.png">
-  </head>
 
-  <body>
-    <header> 
-      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
-        <div class="container">
-          <a href="../index.html" class="navbar-brand">
-          <img src="../src/imagens/KingDomfy.png" width="100">
-          </a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Bem-vindo à comunidade de desenvolvedores do KingDomfy! Saiba como contribuir com o projeto e acesse nossa documentação.">
+
+  <title>KingDomfy - Para Desenvolvedores</title>
+  <link rel="icon" href="../src/imagens/favicon.png">
+
+  <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
+  <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
+</head>
+
+<body id="desenvolvedores">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+      <div class="container">
+        <a href="../index.html" class="navbar-brand">
+          <img src="../src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-principal" aria-controls="nav-principal" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars text-white"></i>
         </button>
         <div class="collapse navbar-collapse" id="nav-principal">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="premium.html" class="nav-link">Premium</a>
-            </li>
-            <li class="nav-item">
-              <a href="ajuda.html" class="nav-link">Ajuda</a>
-            </li>
-            <li class="nav-item">
-              <a href="baixar.html" class="nav-link">Baixar</a>
-            </li>
+            <li class="nav-item"><a href="premium.html" class="nav-link">Premium</a></li>
+            <li class="nav-item"><a href="ajuda.html" class="nav-link">Ajuda</a></li>
+            <li class="nav-item"><a href="baixar.html" class="nav-link">Baixar</a></li>
             <li class="nav-item divisor"></li>
-            <li class="nav-item">
-              <a href="inscrever-se.html" class="nav-link">Inscrever-se</a>
-            </li>
-            <li class="nav-item">
-              <a href="entrar.html" class="nav-link">Entrar</a>
-            </li>
+            <li class="nav-item"><a href="inscrever-se.html" class="nav-link">Inscrever-se</a></li>
+            <li class="nav-item"><a href="entrar.html" class="nav-link">Entrar</a></li>
           </ul>
         </div>
-        </div>
-      </nav>
-    </header> 
+      </div>
+    </nav>
+  </header>
 
-    <section class="caixa">
-        <div class="container">
-            <div class="conteudo-interno">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h2 class="mb-4">Para Desenvolvedores</h2>
-                        <p class="lead">Bem-vindo à comunidade de desenvolvedores do KingDomfy! Este é o lugar onde a mágica acontece. Se você é apaixonado por código e música, está no lugar certo.</p>
-                    </div>
+  <main class="caixa">
+    <div class="container">
+        <div class="conteudo-interno">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2 class="mb-4">Para Desenvolvedores</h2>
+                    <p class="lead">Bem-vindo à comunidade de desenvolvedores do KingDomfy! Este é o lugar onde a mágica acontece. Se você é apaixonado por código e música, está no lugar certo.</p>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-md-4">
-                        <h2>Como Contribuir</h2>
-                        <p>O KingDomfy é um projeto de código aberto, e sua contribuição é muito bem-vinda. Você pode nos ajudar a corrigir bugs, desenvolver novas funcionalidades ou melhorar a documentação. Confira nosso repositório no GitHub para começar.</p>
-                        <a href="https://github.com/Domisnnet/KingDomfy" class="btn btn-custom btn-roxo" target="_blank">Ver no GitHub</a>
-                    </div>
-                    <div class="col-md-4">
-                        <h2>Documentação da API</h2>
-                        <p>No futuro, planejamos lançar uma API pública para que você possa criar suas próprias integrações com o KingDomfy. A documentação estará disponível aqui assim que for finalizada. Fique atento para mais detalhes!</p>
-                        <a href="#" class="btn btn-custom btn-branco disabled">Acessar Documentação (Em Breve)</a>
-                    </div>
-                    <div class="col-md-4">
-                        <h2>Diretrizes</h2>
-                        <p>Para garantir a qualidade e a consistência do projeto, pedimos que siga nossas diretrizes de contribuição. Elas incluem padrões de codificação, processos de pull request e outras informações importantes para colaborar de forma eficaz.</p>
-                        <a href="https://github.com/Domisnnet/KingDomfy/blob/main/CONTRIBUTING.md" class="btn btn-custom btn-roxo" target="_blank">Ler Diretrizes</a>
-                    </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-4">
+                    <h2>Como Contribuir</h2>
+                    <p>O KingDomfy é um projeto de código aberto, e sua contribuição é muito bem-vinda. Você pode nos ajudar a corrigir bugs, desenvolver novas funcionalidades ou melhorar a documentação. Confira nosso repositório no GitHub para começar.</p>
+                    <a href="https://github.com/Domisnnet/KingDomfy" class="btn btn-custom btn-roxo" target="_blank">Ver no GitHub</a>
+                </div>
+                <div class="col-md-4">
+                    <h2>Documentação da API</h2>
+                    <p>No futuro, planejamos lançar uma API pública para que você possa criar suas próprias integrações com o KingDomfy. A documentação estará disponível aqui assim que for finalizada. Fique atento para mais detalhes!</p>
+                    <a href="#" class="btn btn-custom btn-branco disabled">Acessar Documentação (Em Breve)</a>
+                </div>
+                <div class="col-md-4">
+                    <h2>Diretrizes</h2>
+                    <p>Para garantir a qualidade e a consistência do projeto, pedimos que siga nossas diretrizes de contribuição. Elas incluem padrões de codificação, processos de pull request e outras informações importantes para colaborar de forma eficaz.</p>
+                    <a href="https://github.com/Domisnnet/KingDomfy/blob/main/CONTRIBUTING.md" class="btn btn-custom btn-roxo" target="_blank">Ler Diretrizes</a>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+  </main>
 
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-auto mb-4">
-            <h4>Company</h4>
-            <ul class="navbar-nav">
-              <li><a href="sobre.html">Sobre</a></li>
-              <li><a href="empregos.html">Empregos</a></li>
-              <li><a href="imprensa.html">Imprensa</a></li>
-              <li><a href="novidades.html">Novidades</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>Comunidades</h4>
-            <ul class="navbar-nav">
-              <li><a href="artistas.html">Artistas</a></li>
-              <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
-              <li><a href="marcas.html">Marcas</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>Links Úteis</h4>
-            <ul class="navbar-nav">
-              <li><a href="suporte.html">Suporte</a></li>
-              <li><a href="player-da-web.html">Player da Web</a></li>
-              <li><a href="aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>Site feito com:</h4>
-            <ul id="media">
-              <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
-              </li>
-              <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" />
-              </li>
-               <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" />
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4">
-            <h4>Site feito por:</h4>
-            <ul class="navbar-nav">
-              <li>
-                <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
-                  DomisDev
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-auto mb-4 ml-lg-auto">
-            <h4>Redes Sociais:</h4>
-            <ul class="social-media-icons">
-              <li>
-                <a href="#">
-                  <img src="../src/imagens/facebook.png" class="social-icon">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="../src/imagens/twitter.png" class="social-icon">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="../src/imagens/instagram.png" class="social-icon">
-                </a>
-              </li>
-            </ul>
-          </div>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-auto mb-4">
+          <h4>Company</h4>
+          <ul class="navbar-nav">
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="empregos.html">Empregos</a></li>
+            <li><a href="imprensa.html">Imprensa</a></li>
+            <li><a href="novidades.html">Novidades</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Comunidades</h4>
+          <ul class="navbar-nav">
+            <li><a href="artistas.html">Para Artistas</a></li>
+            <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
+            <li><a href="marcas.html">Marcas</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Links Úteis</h4>
+          <ul class="navbar-nav">
+            <li><a href="ajuda.html">Ajuda</a></li>
+            <li><a href="player-da-web.html">Player da Web</a></li>
+            <li><a href="aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Site feito com:</h4>
+          <ul id="media">
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" alt="HTML5">
+            </li>
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" alt="CSS3">
+            </li>
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" alt="JavaScript">
+            </li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4">
+          <h4>Site feito por:</h4>
+          <ul class="navbar-nav">
+            <li>
+              <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
+                DomisDev
+              </a>
+            </li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-auto mb-4 ml-lg-auto">
+          <h4>Redes Sociais</h4>
+          <ul class="social-media-icons">
+            <li>
+              <a href="#" aria-label="Facebook">
+                <img src="../src/imagens/facebook.png" class="social-icon" alt="Facebook">
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Twitter">
+                <img src="../src/imagens/twitter.png" class="social-icon" alt="Twitter">
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Instagram">
+                <img src="../src/imagens/instagram.png" class="social-icon" alt="Instagram">
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-    </footer>
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/popper/popper.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../src/js/app.js" defer></script>
+    </div>
+  </footer>
+  
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/popper/popper.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../src/js/app.js" defer></script>
   </body>
-</html>
+  </html>
+  
